# GTK-DesktopApplication

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projectx.glade.bak  projectx.gladep.bak
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  STOCK.txt  admin.c  admin.h  agent.c  agent.h  callbacks.c  callbacks.h  capteur.c  capteur.h  capteur.txt  clubs.c  clubs.h  clubs.txt  email.c  email.h  etudiantheberge.txt  interface.c  interface.c.bak  interface.h.bak  main.c  menu.txt  mouvement.txt  niveau.txt  nutritioniste.c  nutritioniste.h  projectx  reclamation.c  reclamation.h  reclamation.txt  reclamations.txt  stock.c  stock.h  users.txt
src/.deps/: admin.Po  agent.Po  callbacks.Po  capteur.Po  clubs.Po  email.Po  nutritioniste.Po  reclamation.Po  stock.Po
